--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,6 +1,7 @@
 // Global custom Foundation Settings, copied from default Foundation settings file so that it won't be overwritten on updates
 @import "foundation-overrides";
 
+// Custom styles
 @import "main";
 
 // Comment out this import if you don't want to use normalize
