--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,9 +1,28 @@
 // Custom styles go here
 
-.entry-content {
-    margin-top: emCalc(20px);
+.pad-top {
+    margin-top: emCalc(20px) !important;
 }
 
 .circle-img {
     border-radius: 50%;
 }
+
+.footer-wrap {
+    width: 100%;
+    background-color: #204054;
+    color: #fff;
+}
+
+.footer-social img {
+    padding: 5px;
+}
+
+.footer-copyright {
+    font-weight: 100;
+    font-size: 12px;
+    margin-bottom: 20px;
+    display: block;
+    letter-spacing: 2px;
+}
+
