--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
 Theme Name: WpFdn
-Theme URI: http://pelagiclab.com/
+Theme URI: http://sabalapps.com/
 Description: WordPress theme built with Foundation
-Author: pelagiclab
-Author URI: http://pelagiclab.com/
+Author: Sabal Apps, LLC
+Author URI: http://sabalapps.com/
 Version: 1.0
 Tags: foundation, responsive
 */
